--- a/assets/css/cv_02.css
+++ b/assets/css/cv_02.css
@@ -2,4 +2,26 @@ embed {
   width: 100%;
   height: 75vh;
 }
+
+footer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  gap: 10px 20px;
+      grid-template-areas: ". " ". ";
+  width: 100%;
+  height: 100%;
+}
+
+footer a {
+  text-align: center;
+  text-decoration: underline;
+  font-weight: bold;
+  color: #1372AD;
+  margin: auto auto;
+  font-size: 10vw;
+}
 /*# sourceMappingURL=cv_02.css.map */
