--- a/assets/css/cv_02.scss
+++ b/assets/css/cv_02.scss
@@ -7,3 +7,21 @@ embed {
     width: 100%;
     height: 75vh;
 }
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px 20px;
+    grid-template-areas: ". " ". ";
+    width: 100%;
+    height: 100%;
+    a {
+        text-align: center;
+        text-decoration: underline;
+        font-weight: bold;
+        color: $c1;
+        margin: auto auto;
+        font-size: 10vw;
+    }
+}
